--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>jQuery Template</title>
+    <title>index.html</title>
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
         $(function(){
