color change jq added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         var story = $('input').val();
         $('p').html(
-//There was a (girl/boy) named (input) their favorite season is (s/w/f/sp) and they like (c/s/b/e) ice cream
+          //There was a (girl/boy) named (input) their favorite season is (s/w/f/sp) and they like (c/s/b/e) ice cream
         );
 
 
@@ -32,12 +32,19 @@
 <body>
 
   Season:
-  <input id="season"> // Change to birth month
-  <br> Ice cream flavor:
+  <input id="season">
+
+  <br>
+  <br>Ice cream flavor:
+  <br>
   <input id="flavor">
-  <br> Name:
+  <br>
+  <br>Name:
+  <br>
   <input id="name">
+  <br>
   <br>Color:
+  <br>
   <input id="color">
 
   <button>Generate Madlib!</button>
