--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>html() and val() Madlib</title>
+  <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>
     $(function() {
 
       $('button').click(function() {
-        var season = $('#season').val(); // maybe their birthmonth
+
+        var month = $('#month').val(); // maybe their birthmonth
         var flavor = $('#flavor').val();
         var name = $('#name').val();
         var color = $('#color').val();
 
+
         var story = $('input').val();
-        $('p').html(
-          //There was a (girl/boy) named (input) their favorite season is (s/w/f/sp) and they like (c/s/b/e) ice cream
-        );
+        $('p').html("Hey  " + name + " I hope you get lots of " + flavor + " cake on your birthday in " + month + "!");
 
 
         $('body').css('background-color', color);
@@ -30,22 +32,26 @@
 </head>
 
 <body>
-
-  Season:
-  <input id="season">
-
+  <h1>Birthday Suprise</h1>
   <br>
-  <br>Ice cream flavor:
   <br>
+  <h5>Birth month:</h5>
+
+  <input id="month">
+
+  <h5>Favorite cake flavor:</h5>
+  
   <input id="flavor">
-  <br>
-  <br>Name:
-  <br>
+
+  <h5>Name:</h5>
+
   <input id="name">
-  <br>
-  <br>Color:
-  <br>
+
+  <h5>Color:</h5>
+
   <input id="color">
+  <br>
+  <br>
 
   <button>Generate Madlib!</button>
 
