--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         $('p').css('background-color', color);//changes background color baseds on user input
-$('body').css('background-color', color1);
+$('body').css('background-color', color);
       });
 
     });
