--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         $('p').html("Hey  " + name + " I hope you get lots of " + flavor + " cake on your birthday in " + month + "!"); // this is the madd libb
 
 
-        $('p').css('background-color', color);//changes background color baseds on user input
+        $('p').css('background-color', color1);//changes background color baseds on user input
 $('body').css('background-color', color);
       });
 
