--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         var flavor = $('#flavor').val();
         var name = $('#name').val();
         var color = $('#color').val();
-        var color1 = $('#color1').val();
+        var color1 = $('#color1').val(); //
 
 
         var story = $('input').val();
